--- a/_config.yml
+++ b/_config.yml
@@ -3,4 +3,4 @@ description: Cloth Manipulation and Perception Competition official website
 author: Irene Garcia-Camacho
 show_downloads: true
 google_analytics:
-theme: jekyll-theme-slate
+theme: jekyll-theme-cayman
